--- a/index.ipynb
+++ b/index.ipynb
@@ -233,22 +233,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['USA', 'Argentina', 'Mexico', 'USA']"
+       "['Argentina', 'Mexico', 'USA']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kindof_neighbors = countries[1:5]\n",
+    "kindof_neighbors = countries[2:5]\n",
     "kindof_neighbors"
    ]
   },
